# zk-ressources

./: .gitmodules  README.md
number_theory/: 0_modular_arithmetic.md  1_euclids_algorithm.md  2_division.md
ressources/: online-ressources.md
uncloak/: README.md
uncloak/uncloak-hw-self/: Cargo.toml
uncloak/uncloak-hw-self/hw3/: Cargo.toml  ReadMe.md
uncloak/uncloak-hw-self/hw3/benches/: bench.rs
uncloak/uncloak-hw-self/hw3/src/: lib.rs
uncloak/uncloak-hw-self/hw4/: Cargo.toml
uncloak/uncloak-hw-self/hw4/src/: lib.rs
uncloak/uncloak-notes/: week-1.md  week-10.md  week-11.md  week-12a.md  week-12b.md  week-13.md  week-2.md  week-3.md  week-4.md  week-7.md  week-8.md
uncloak/uncloak-notes/ressources/: triangular_numbers.md  xor_cipher.md
uncloak/uncloak-notes/theory/: notation.md  sophie_german_prime.md  sponge_functions.md
