[package]
name = "hw4-self"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"

# [dev-dependencies]
# criterion = "0.4"

# [[bench]]
# name = "bench"
# harness = false
